[tool.poetry]
name = "streamlit_example"
version = "0.1.0"
description = "Test streamlit project"
authors = ["Will Marsh <wtmrsh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
altair = "5.3.0"
pandas = "2.2.2"
streamlit = "1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"